fix readable colours and /me

--- a/tchat/style.css
+++ b/tchat/style.css
@@ -72,10 +72,6 @@ img {
   font-weight: bold;
 }
 
-.nick.dark {
-  filter: brightness(1.3);
-}
-
 .USERNOTICE {
   background-color: #c466ff64;
 }
@@ -96,7 +92,7 @@ img {
 }
 
 .system-msg,
-.action .message {
+.action {
   font-style: italic;
 }
 
